@@ -1,5 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.factory;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
@@ -15,15 +16,15 @@ public final class InlineKeyboardFactory {
 	public static InlineKeyboardMarkup createSearchKeyboard() {
 		InlineKeyboardMarkup keyboard = new InlineKeyboardMarkup();
 		
-		List<List<InlineKeyboardButton>> buttons = List.of();		
+		List<List<InlineKeyboardButton>> buttons = Arrays.asList();		
 		
 		keyboard.setKeyboard(buttons);
 		return keyboard;
 	}
 	
 	public static InlineKeyboardMarkup createAddPlaceToListKeyboard(Venue venue) {
-		return createInlineKeyboard(List.of(
-				new InlineKeyboardButton("Add to list").setCallbackData(PlacesBotConstants.ADD_PLACE_TO_LIST + "_" + venue.getId()))
+		return createInlineKeyboard(Arrays.asList(
+				new InlineKeyboardButton("Add to list").setCallbackData(PlacesBotConstants.ADD_PLACE_TO_LIST + PlacesBotConstants.COMMAND_SEPARATOR + venue.getId()))
 				);
 	}
 	
@@ -34,7 +35,7 @@ public final class InlineKeyboardFactory {
 	@SafeVarargs
 	public static InlineKeyboardMarkup createInlineKeyboard(List<InlineKeyboardButton>... buttonRows) {
 		InlineKeyboardMarkup keyboard = new InlineKeyboardMarkup();		
-		keyboard.setKeyboard(List.of(buttonRows));
+		keyboard.setKeyboard(Arrays.asList(buttonRows));
 		return keyboard;
 	}
 
