@@ -1,6 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.command;
 
-import java.io.Serializable;
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
@@ -8,59 +8,59 @@ import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
 import utn.tacs.grupo3.telegram.bot.constants.PlacesBotConstants;
+import utn.tacs.grupo3.telegram.bot.exception.ParseException;
 import utn.tacs.grupo3.telegram.bot.factory.MessageFactory;
 import utn.tacs.grupo3.telegram.bot.factory.ReplyKeyboardFactory;
 import utn.tacs.grupo3.telegram.bot.handler.AbstractCommandHandler;
 import utn.tacs.grupo3.telegram.bot.helper.HtmlHelper;
 import utn.tacs.grupo3.telegram.bot.request.exception.BadCredentialsException;
-import utn.tacs.grupo3.telegram.bot.user.LoggedUsers;
-import utn.tacs.grupo3.telegram.bot.user.LoginStatusChecker;
-import utn.tacs.grupo3.telegram.bot.user.User;
+import utn.tacs.grupo3.telegram.bot.user.UserCredentials;
 
+/**
+ * Handler for /login command
+ *
+ */
 public class LoginCommandHandler extends AbstractCommandHandler{
-	
-	public LoginCommandHandler(LoginStatusChecker loginStatusChecker) {
-		super(loginStatusChecker);
-	}
 
 	@Override
-	public <T extends Serializable> List<BotApiMethod<?>> handleCommand(Message message) {
-		loginStatusChecker.checkUserLoginStatus(message.getFrom());
+	public List<BotApiMethod<?>> handle(Message message) {
 		
-		//TODO Make request
-		String token;
-		try {
-			token = apiRequest.login(new User(getUsername(message.getText()),getPassword(message.getText())));
-			SendMessage successfulLogin = MessageFactory.createSendMessage(message)
-					.setText("Successful login, welcome");
-			
-			String text = HtmlHelper.formatText(
-					HtmlHelper.bold("Select an option please"), HtmlHelper.br(),
-					PlacesBotConstants.MY_LISTS_COMMAND, HtmlHelper.br(),
-					PlacesBotConstants.SEARCH_COMMAND
-					);
-			
-			SendMessage answer = MessageFactory.createSendMessage(message)
-					.setText(text)
-					.setReplyMarkup(ReplyKeyboardFactory.createCommandKeyboard());		
-			
-			LoggedUsers.addLoggedUser(
-					message.getFrom().getId(), 
-					getUsername(message.getText()), 
-					message.getChatId().toString(),
-					token);
+		SendMessage successfulLogin = MessageFactory.createSendMessage(message)
+				.setText(HtmlHelper.bold("Successful login, welcome"));
+		
+		String text = HtmlHelper.formatText(
+				HtmlHelper.bold("Select an option please"), HtmlHelper.br(),
+				PlacesBotConstants.MY_LISTS_COMMAND, HtmlHelper.br(),
+				PlacesBotConstants.SEARCH_COMMAND
+				);
+		
+		SendMessage answer = MessageFactory.createSendMessage(message)
+				.setText(text)
+				.setReplyMarkup(ReplyKeyboardFactory.createCommandKeyboard());		
 
-			return List.of(successfulLogin, answer);
+		try {
+			UserCredentials credentials = getUserCredentials(message.getText());
+
+			apiRequest.login(credentials, message.getFrom().getId());			
+
+			return Arrays.asList(successfulLogin, answer);
 			
 		} catch (BadCredentialsException e) {
 			SendMessage failedLogin = MessageFactory.createSendMessage(message)
 					.setText("You have entered an invalid username or password")
 					.setReplyMarkup(ReplyKeyboardFactory.createInitialKeyBoard());
 			
-			return List.of(failedLogin);
+			return Arrays.asList(failedLogin);
 		}
-		
 
 	}
-
+	
+	private UserCredentials getUserCredentials(String text) {
+		String[] parsed = text.split("\\s+"); // \s is a regex for blank space
+		
+		if (parsed.length != 3) {
+			throw new ParseException("Invalid format. It must be /login USERNAME PASSWORD");
+		}		
+		return new UserCredentials(parsed[1], parsed[2]);		
+	}
 }
