@@ -1,5 +1,6 @@
 package utn.tacs.grupo3.telegram.bot.handler.inlineQuery;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.telegram.telegrambots.meta.api.methods.AnswerInlineQuery;
@@ -16,10 +17,12 @@ import utn.tacs.grupo3.telegram.bot.request.entity.Venue;
 public class SearchNearMeInlineQueryHandler implements InlineQueryHandler{
 
 	@Override
-	public List<BotApiMethod<?>> handleInlineQuery(InlineQuery inlineQuery) {
+	public List<BotApiMethod<?>> handle(InlineQuery inlineQuery) {
+		
 		if (inlineQuery.getLocation() == null) {
 			throw new LocationNotEnabledException("Please enable location services");
 		}
+		
 		Location location = inlineQuery.getLocation();		
 		List<Venue> venues = apiRequest.near(
 				location.getLatitude(), 
@@ -29,7 +32,7 @@ public class SearchNearMeInlineQueryHandler implements InlineQueryHandler{
 		AnswerInlineQuery answer = MessageFactory.createAnswerInlineQuery(inlineQuery);		
 		answer.setResults(InlineQueryResultFactory.createNearMeQueryResultsWithKeyboard(venues));		
 
-		return List.of(answer);
+		return Arrays.asList(answer);
 	}
 
 }
